2008-06-12  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in:		add complete deps on tclDTrace.h.

	* unix/Makefile.in:		clean generated tclDTrace.h file.
	* unix/configure.in (SunOS): 	fix static DTrace-enabled build.

	* unix/tcl.m4 (SunOS-5.11): fix 64bit amd64 support with gcc & Sun cc.
	* unix/configure: autoconf-2.59

	* macosx/Tcl.xcodeproj/project.pbxproj:	add debug configs with gcov,
	and with corefoundation disabled; updates and cleanup for Xcode 3.1 and
	for Leopard.
	* macosx/Tcl.xcode/project.pbxproj:	sync Tcl.xcodeproj changes.
	* macosx/README:			document new build configs.

2008-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/io.test (io-53.9): need to close chan before removing file.

2008-05-23  Andreas Kupries  <andreask@activestate.com>

	* win/tclWinChan.c (FileWideSeekProc): Accepted a patch by
	Alexandre Ferrieux <ferrieux@users.sourceforge.net> to fix the
	[Bug 1965787]. 'tell' now works for locations > 2 GB as well
	instead of going negative.

	* generic/tclIO.c (Tcl_SetChannelBufferSize): Accepted a patch by
	* tests/io.test: Alexandre Ferrieux <ferrieux@users.sourceforge.net>
	* tests/chanio.test: to fix the [Bug 1969953]. Buffersize outside
	of the supported range are now clipped to nearest boundary instead
	of ignored.

2008-05-22  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclNamesp.c (Tcl_LogCommandInfo):	Restored ability to
	handle the argument value length = -1.  Thanks to Chris Darroch for
	discovering the bug and providing the fix.  [Bug 1968245].

2008-05-21  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParse.c (ParseComment):    The new TclParseAllWhiteSpace()
	* tests/parse.test (parse-15.60):       routine has no mechanism to
	return the "incomplete" status of "\\\n" so calling this routine
	anywhere that can be reached within a Tcl_ParseCommand() call is a
	mistake.  In particular, ParseComment() must not use it.  [Bug 1968882].

2008-05-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
